Update
Added private URL functionality
Added Design documentation